--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,8 @@ body {
 	font-weight: 500;
 }
 
-.LBlock img{
+
+.headshot {
 	height: 320px;
 	width: 320px;
 	border: 2px solid #009933
@@ -52,10 +53,12 @@ h3 {
 }
 
 
+.location {
+	height: 36px;
+	margin-right: 8px;
+	padding-bottom: 10px;
 
-
-
-
+}
 
 
 @font-face {
@@ -190,6 +193,7 @@ h3 {
   text-decoration: none;
   color: #009933;
 }
+
 
 
 
